<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".MainActivity" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/edit" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"  />


	    <EditText
	        android:id="@+id/edpassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/edusername"
	        android:ems="10"
	        android:hint="@string/password"
	        android:inputType="textPassword"
	        android:textColor="@color/white"
	        android:textSize="30sp" />

	    <EditText
	        android:id="@+id/edemail"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/edpassword"
	        android:ems="10"
	        android:hint="@string/email"
	        android:inputType="text"
	        android:textColor="@color/white"
	        android:textSize="30sp" />

	    <EditText
	        android:id="@+id/edphone"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/edemail"
	        android:ems="12"
	        android:hint="@string/phone"
	        android:inputType="phone"
	        android:textColor="@color/white"
	        android:textSize="30sp" />

	    <EditText
	        android:id="@+id/edusername"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="52dp"
	        android:ems="10"
	        android:hint="@string/username"
	        android:inputType="textPersonName"
	        android:textColor="@color/white"
	        android:textSize="30sp" />

	    <Button
	        android:id="@+id/btedok"
	        android:layout_width="130dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/edphone"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="14dp"
	        android:background="@color/white"
	        android:onClick="onClickbtok"
	        android:text="@string/ok" />

	</RelativeLayout>