<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@color/blue"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/usename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtUsername"
        android:layout_alignParentTop="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/username" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtUsername"
        android:layout_below="@+id/edtUsername"
         android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/password" />
 
   	<EditText
        android:id="@+id/edtUsername"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usename"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:ems="10"
        android:inputType="text"
        android:hint="username" />
    
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="password" />

      <Button
          android:id="@+id/login"
          android:layout_width="140dp"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_centerVertical="true"
          android:layout_marginLeft="14dp"
          android:background="@color/white"
          android:onClick="clickBtn"
          android:text="@string/login" />

      <Button
          android:id="@+id/register"
          android:layout_width="140dp"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_centerVertical="true"
          android:layout_margin="16dp"
          android:background="@color/white"
          android:onClick="clickBtn"
          android:text="@string/register" />

      <ProgressBar
          android:id="@+id/progressBar1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:textColor="@color/white"
          android:layout_alignParentTop="true" />

</RelativeLayout>